--- a/src/components/sbb-navigation/sbb-navigation.scss
+++ b/src/components/sbb-navigation/sbb-navigation.scss
@@ -97,7 +97,7 @@
   inset: var(--sbb-navigation-inset);
   pointer-events: none;
   overflow: hidden;
-  z-index: 10;
+  z-index: var(--sbb-navigation-z-index, 1000);
   transform: var(--sbb-navgation-transform);
 
   @include sbb.mq($from: large) {
@@ -181,7 +181,7 @@
   width: var(--sbb-navigation-expanded-width);
   pointer-events: none;
   padding: var(--sbb-spacing-responsive-xs);
-  z-index: 11;
+  z-index: calc(var(--sbb-navigation-z-index, 1000) + 1);
 }
 
 .sbb-navigation__close {
